Fix Safari overflow in carousel

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -471,6 +471,7 @@ button .ripple {
 */
 #carousel-container {
   width: 100%;
+  min-width: 0;
   overflow: hidden;
 }
 
